--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Tower Game No P5</title>
+  <title>Tower Game Merge</title>
   <script src="libraries/vector2d.js" type="text/javascript"></script>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="game.js" type="text/javascript"></script>
@@ -11,6 +11,7 @@
   <script src="enemy.js" type="text/javascript"></script>
   <script src="tower.js" type="text/javascript"></script>
   <script src="bullet.js" type="text/javascript"></script>
+  <script src="cell.js" type="text/javascript"></script>
 </head>
 
 <body>
